syntax = "proto3";

package auth;

service Auth {
    rpc Authorize (AuthorizeRequest) returns (AuthorizeReply) {
    }
    rpc CheckAuthorize (CheckAuthorizeRequest) returns (CheckAuthorizeReply) {
    }
    // does nothing, but could be useful if we switch to sessions some time
    rpc Unauthorize (UnauthorizeRequest) returns (UnauthorizeReply) {
    }
}

message AuthorizeRequest {
    string username_or_email = 1;
    string password = 2;
}

message AuthorizeReply {
    bool ok = 1;
}

message CheckAuthorizeRequest {
    bytes token = 1;
}

message CheckAuthorizeReply {
    bool ok = 1;
    int64 uid = 2;
}

message UnauthorizeRequest {
}

message UnauthorizeReply {
}
